rajesh bg image chnage

--- a/bcards/venkat.html
+++ b/bcards/venkat.html
@@ -63,7 +63,9 @@ img.emoji {
 	background: none !important;
 	padding: 0 !important;
 }
-
+.header-has-img.home .head-bg{
+	height: 131px !important;
+}
 @media screen and (max-width: 767px) {
 	.floating-wpp .floating-wpp-popup.active {
     padding: 0 12px 12px 12px;
@@ -120,7 +122,7 @@ var date = {"months":["January","February","March","April","May","June","July","
 </div>
 <div class="wrapper" style="background-color: black;">
 <header class="header">
-<div class="head-bg" style="background-image: url('images/INTEGRITY\ USA.jpg') !important"></div>
+<div class="head-bg" style="background-image: url('images/shake\ hand.jpg') !important"></div>
 <div class="head-bar has-woo has-sidebar head-sticky-classic">
 	<div class="head-bar-inner">
 	<div class="row">
