deleted unused images

--- a/index.html
+++ b/index.html
@@ -785,9 +785,9 @@ and (orientation : landscape) {
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/myratz.jpg" class="thumb-link" title="Myratz"
+                            <a href="images/portfolio/myratz.jpg" class="thumb-link" title="Myratz"
                                 data-size="1050x700">
-                                <img src="images/portfolio/gallery/myratz.jpg" alt="">
+                                <img src="images/portfolio/myratz.jpg" alt="">
                             </a>
                         </div>
 
@@ -810,9 +810,9 @@ and (orientation : landscape) {
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/gowri.jpg" class="thumb-link" title="Gowri Sankar"
+                            <a href="images/portfolio/gowri.jpg" class="thumb-link" title="Gowri Sankar"
                                 data-size="1050x700">
-                                <img src="images/portfolio/gallery/gowri.jpg" alt="">
+                                <img src="images/portfolio/gowri.jpg" alt="">
                             </a>
                         </div>
 
